# london-econ-today-dash

./: .gitignore  Dockerfile  README.md  app_config.toml  docker-compose.yml  pyproject.toml  requirements.txt
app/: data_provider.py  main.py
app/assets/: app.css  plotly.css
app/graph_helper/: __init__.py  data_compose.py  data_general.py
