[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "london-econ-today-dash"
description = "A dashboard app for London economic data"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["dash", "dashboard", "london", "economics"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.setuptools.packages.find]
include = ["app"]
exclude = ["tests"]
namespaces = false # Disabling scanning for PEP 420 namespace packages

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING"]
